# larik-sql-studio

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  Taskfile.yml  index.html  package-lock.json  package.json  test-format.mjs  test-formatter.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: BUILD_AND_VERSIONING.md
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: connection.rs  management.rs  managers.rs  mod.rs  postgres_manager.rs  query.rs  registry.rs  schema.rs  sqlite_manager.rs  traits.rs
src-tauri/src/db/drivers/: mod.rs  mssql.rs  postgres.rs  sqlite.rs
src-tauri/src/export/: csv.rs  json.rs  mod.rs
src-tauri/src/storage/: crud.rs  database.rs  folders.rs  history.rs  mod.rs  snippets.rs  spaces.rs  state.rs  tabs.rs
src/api/: index.ts
src/components/: AppLayout.tsx  ArchiveModal.tsx  ArchiveSection.tsx  CellPreviewPanel.tsx  CommandPalette.tsx  ContextMenu.tsx  CreateFolderDialog.tsx  CreateSpaceModal.tsx  CreateSpaceModal.tsx.bak  DatabaseSelector.tsx  ExportDialog.tsx  FolderItem.tsx  GlobalSearch.tsx  MonacoPreview.tsx  QueryEditor.tsx  ResultsGrid.tsx  SettingsDialog.tsx  ShortcutsDialog.tsx  SnippetsDialog.tsx  SpacesSelector.tsx  SqlExportDialog.tsx  StickyNote.tsx  TabsList.tsx  TitleBar.tsx  Toast.tsx
src/hooks/: useKeyboardShortcuts.tsx  useSqlValidation.ts  useStickyNotes.tsx
src/store/: index.ts
src/types/: index.ts
(+25 files in other folders)
