[package]
name = "larik-sql-studio"
version = "0.1.0"
description = "Workspace-Centric SQL Studio"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "larik_sql_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
directories = "5"
uuid = { version = "1", features = ["v4"] }

# MS-SQL connection (T015)
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
bb8 = "0.8"
bb8-tiberius = "0.15"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2.6.0"

